--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 	</head>
 	<body class="is-preload">
 
-		<script src="p5.js"></script>
-		<script src="sketch.js"></script>
-		
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
@@ -33,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Camille TRALA</a>
 					</header>
 
 				<!-- Nav -->
@@ -57,7 +54,7 @@
 							<article class="post featured">
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="#">voici<br />
+									<h2><a href="#">
 									mes projets</a></h2>
 									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
@@ -73,7 +70,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
+										<!-- <span class="date">April 24, 2017</span> -->
 										<h2><a href="#">Sed magna<br />
 										ipsum faucibus</a></h2>
 									</header>
@@ -146,9 +143,9 @@
 							</section>
 
 						<!-- Footer -->
-							<footer>
+							<!-- <footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
+									<a href="#" class="previous">Prev</a>
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
@@ -158,7 +155,7 @@
 									<a href="#" class="page">10</a>
 									<a href="#" class="next">Next</a>
 								</div>
-							</footer>
+							</footer> -->
 
 					</div>
 
@@ -188,13 +185,12 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>Paris</p>
 							</section>
-							<section>
+							<!-- <section>
 								<h3>Phone</h3>
 								<p><a href="#">(000) 000-0000</a></p>
-							</section>
+							</section> -->
 							<section>
 								<h3>Email</h3>
 								<p><a href="#">info@untitled.tld</a></p>
